<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/bg_register"
        android:scrollbarStyle="outsideOverlay">
        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="top"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="vertical"
                android:gravity="center_vertical|center_horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quiznum"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingBottom="20dp"
            android:textColor="@color/white"
            android:textSize="30dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fill in Blanks"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingBottom="20dp"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/question"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_question"
            android:padding="10dp"
            android:singleLine="false"
            android:inputType="textCapWords|textMultiLine"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:textCursorDrawable="@null"
            android:cursorVisible="true"/>

        <EditText
            android:id="@+id/optiona"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_correctans"
            android:padding="10dp"
            android:singleLine="false"
            android:inputType="textCapWords|textMultiLine"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:textCursorDrawable="@null"
            android:cursorVisible="true"/>


        <!-- Login Button -->

        <Button
            android:id="@+id/btnSubmitquestion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/white"
            android:text="@string/btn_submitquestion"
            android:textColor="@color/bg_register" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnBacktomain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@color/bg_question"
            android:text="Go Back to Main"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>
</ScrollView>
    </LinearLayout>