<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/bg_register"
        android:scrollbarStyle="outsideOverlay">
        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="top"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="vertical"
                android:gravity="center_vertical|center_horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quiznum"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingBottom="20dp"
            android:textColor="@color/white"
            android:textSize="30dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="True or False"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingBottom="20dp"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/question"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:padding="10dp"
            android:singleLine="false"
            android:textColor="@color/input_register" />

        <TextView
            android:id="@+id/optiona"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:padding="10dp"
            android:singleLine="false"
            android:textColor="@color/input_register" />

        <TextView
            android:id="@+id/optionb"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:padding="10dp"
            android:singleLine="false"
            android:textColor="@color/input_register" />




        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">


            <Button
                android:id="@+id/btnPreviousQuestion"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"

                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip"
                android:layout_marginRight="10dip"
                android:background="@color/white"
                android:text="@string/btn_previousquestion"
                android:textColor="@color/bg_register" />

            <Button
                android:id="@+id/btnNextQuestion"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="10dip"
                android:text="@string/btn_nextquestion"
                android:background="@color/white"
                android:textColor="@color/bg_register" />/>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/btnEdit"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"

                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip"
                android:layout_marginRight="10dip"
                android:text="Edit"
                android:background="@color/white"
                android:textColor="@color/bg_register" />>

            <Button
                android:id="@+id/btnAdd"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginLeft="10dip"
                android:background="@color/white"
                android:text="Add"
                android:textColor="@color/bg_register" />

            <Button
                android:id="@+id/btnDelete"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="10dip"
                android:background="@color/white"
                android:text="Delete"
                android:textColor="@color/bg_register"  />


        </LinearLayout>

        <Button
            android:id="@+id/btnBackToChooseSet"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@color/bg_question"
            android:text="@string/btn_back_to_chooseset"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <!-- Link to Login Screen -->

    </LinearLayout>



</LinearLayout>
    </ScrollView>
    </LinearLayout>